# cow_much

./: README.md  all_data.xlsx  app.py  app02.py  cow.df_02..ipynb  data_01.py  data_02.py  data_03.py  data_04.py  data_05.py  data_06.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: cow.df_02.-checkpoint.ipynb
templates/: index.html  result.html
