[tool.poetry]
name = "cow"
version = "0.1.0"
description = ""
authors = ["kanta nakagawa <kan0401naka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
statistics = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
